--- a/pom.xml
+++ b/pom.xml
@@ -10,11 +10,14 @@
     <version>3.0</version>
     <modules>
         <module>chapter_001</module>
+        <module>chapter_002</module>
+        <module>chapter_001</module>
+        <module>chapter_002</module>
     </modules>
 
     <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
+        <maven.compiler.source>13</maven.compiler.source>
+        <maven.compiler.target>13</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
@@ -32,7 +35,7 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
- <build>
+    <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -57,4 +60,6 @@
             </plugin>
         </plugins>
     </build>
+
+
 </project>
